css/main.css
/*@font-face {
	font-family:Bitter;
	src:url(fonts/Bitter/Bitter-VariableFont_wght.ttf);
}

@font-face {
	font-family:Montserrat;
	src:url(fonts/Montserrat/Montserrat-VariableFont_wght.ttf);
	
}
*/

/*
1.https://www.w3schools.com/cssref/css3_pr_font-face_rule.php 
2.https://www.digitalocean.com/community/tutorials/how-to-load-and-use-custom-fonts-with-css
*/


body{
    display: flex;
    flex-direction: column;
    font-family: Montserrat;
    font-weight: 400;
    margin: 0;
    background-color: #FFFAFA;
    overflow-x: hidden;
}

pre {
	font-family: Montserrat;
    font-weight: 400;
}

/*nav{
	font-family:Bitter;
	font-size:1.5rem;
} */


.content{
    margin: 6rem 4rem;
}

.element{
    padding-bottom: 2rem;
    border-top-width: 0.15rem;
    border-top-style: solid;
    border-top-color: #C7B299;
}

section{
    margin-bottom: 2rem;
}

img{
    display: block;
    width: 100%;
    height: auto;
}

/* ----------------- INTERACTIVE ELEMENTS -------------------*/

/* Links */
a.text-link, a.text-link :visited{
    text-decoration: none;
    color: #4B84F7;
}

a.text-link:hover {
    transition: background-color 0.25s ease-in-out, color 0.25s ease-in-out;
    background-color: #202020EE;
    color: #FFFFFF;
}

/* Forms */
label{
    display: inline-block;
    font-size: 1rem;
    margin-bottom: 0.5rem;
}

input[type=text], input[type=datetime-local], textarea{
    width: 100%;
    font-family: Montserrat;
    background-color: #EEEEEE;
    padding: 0.5rem;
    outline: none;
    border: none;
    display: block;
    border-bottom: 2px solid #C7B299;
    margin-bottom: 1rem;
}

input[type=text]::placeholder, input[type=datetime-local]::placeholder, textarea::placeholder{
    font-family: 'Montserrat';
}

input[type=text]:focus, input[type=datetime-local]:focus, textarea:focus{
    outline: none;
    transition: border-bottom 0.25s ease-in-out;
    border: none;
    border-bottom: 2px solid #443B35;
}

a.text-button{
    text-decoration: none;
}

input[type=reset], input[type=submit], a.text-button{
    font-size: 1rem;
    background-color: #1B1464;
    font-family: Montserrat;
    color: #F0F0F0;
    padding: 0.5rem 0.8rem 0.5rem 0.8rem;
    border: none;
    cursor: pointer;
}

input[type=reset]:hover, input[type=submit]:hover, a.text-button:hover{
    background-color: #2824E0;
    transition: background-color 0.25s ease-in-out;
}

input[type=radio]{
    cursor: pointer;
}

.form-item{
    width: 40%;
    margin-right: 2rem;
}

/* Image Overlay */
/* Source: https://www.w3schools.com/howto/howto_css_image_overlay_title.asp */
.linked-img {
    position: relative;
    width: 20%;
    height: 30vh;
    border: 4px solid #C7B29980;
}

.linked-img a{
    object-position: center;
}

.linked-img a img{
    object-fit: cover;
    height: 100%;
}

.img-overlay {
    position: absolute;
    bottom: 0;
    background: #7F6549EE; /* Medium brown see-through */
    color: #F0F0F0;
    width: 100%;
    transition: .5s ease;
    opacity:0;
    color: white;
    font-size: 1.25rem;
    padding: .5rem 0 .5rem 0;
    text-align: center;
}

.img-overlay h4{
    margin: 0;
    padding: 0;
}

.linked-img:hover .img-overlay {
    opacity: 1;
}

/* Navigation */
nav{
    display: flex;
    width: 100%;
    background-color: #443B35;
    margin: 0;
    align-items: center;
}

nav.sticky{
    position: fixed;
    height: 6rem;
    max-height: 6rem;
    top: 0;
    z-index: 1;
}

nav a.nav-logo-desktop{
    width: 10%;
    margin: 1rem;
}

nav a.nav-logo-mobile{
    display: none;
    width: 10%;
    margin: 1rem;
}

nav a.nav-cart{
    margin-left: auto;
    margin-right: 2rem;
    width: 2rem;
}

.navi-links{
    padding: 1.5rem 0;
    margin-left: 1rem;
    display: flex;
    gap: 1.5rem;
}

nav a{
    display: inline-block;
    color: #F0F0F0;
    text-decoration: none;
}

nav a.nav-link{
    text-decoration: underline 1.5px solid #F0F0F000;
    text-underline-offset: 0px;
    transition: all 0.4s ease-in-out 0s;
}

nav a.nav-link:hover{ /*https://stackoverflow.com/questions/1734618/how-to-increase-the-gap-between-text-and-underlining-in-css*/
    background-color: #443B35;
    text-decoration: underline 1.5px solid #F0F0F0FF;
    text-underline-offset: 6px;
}

/*Footer*/
footer{
    display: flex;
    background-color: #443B35;
    margin: 0;
    padding: 2rem 6rem;
}
.footer-left a.logo{
    display: block;
    width: 20%;
    margin: 1rem 0rem;
}

footer .footer-left{
    width: 75%;
}

footer h4{
    margin: 0rem;
    color: #FAFAFA;
}

footer .text-link{
    color: #FAFAFA;
    margin-bottom: 1rem;
}

footer ul{
    color: #FAFAFA;
    list-style: none;
    padding-inline-start: 0;
}

footer li{
    margin-bottom: 0.5em;
}

.footer-right li{
    font-size: 0.85rem;
}

.socials{
    display: flex;
    width: 15%;
    gap: 5%;
    margin: 1rem 0;
}

/*Hero Banner*/
.hero{
    background-image: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.8)),url("../img/BoardgameCafe2.jpeg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    margin: -2rem -4rem;
    width: 100vw;
    height: 95vh;
    text-align: center;
}

.hero h1, .hero h3{
    position: relative;
    top: 40%;
    color: #FAFAFA;
    padding: 0 2rem;
}

/*Bleed*/

.bleed{
    display: flex;
    flex-basis: auto;
    gap: 4rem;
    margin: 0 -4rem;
    padding: 0 4rem;
    background-color: #443B3588;
    align-items: center;
}

h2.bleed{
    color: #FAFAFA;
    padding-top: 2rem;
}

.bleed-image{
    margin: 2rem 0;
    width: 60%;
}

.bleed-text{
    color: #FAFAFA;
    margin: 2rem auto;
}

.bleed-text h3{
    margin-top: 0;
}

.bleed-text a{
    display: inline-block;
    color: #FAFAFA;
    text-decoration: none;
}

@media screen and (max-width: 1200px) {
    .bleed-image{
        width: 80%;
    }
}
/* ... */

